1.增加高德地图管理

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <script src=<%= htmlWebpackPlugin.options.path %>bower_components/qiniu/dist/qiniu.min.js></script>
 <script src=<%= htmlWebpackPlugin.options.path %>js/jquery.particleground.min.js></script>
 <script src="https://cdn.bootcss.com/tinymce/4.6.6/tinymce.min.js"></script>
-
+<script type="text/javascript"
+        src="http://webapi.amap.com/maps?v=1.4.5&key=a193b223b319b7742f1657aff8acbab0&plugin=AMap.Autocomplete,AMap.TruckDriving,AMap.Geocoder"></script>
 </body>
 
 </html>
